--- a/Game/package.json
+++ b/Game/package.json
@@ -24,6 +24,7 @@
     "raw-loader": "^0.5.1"
   },
   "dependencies": {
+    "express": "^4.16.4",
     "npm": "^6.7.0",
     "phaser": "^3.3.0"
   }
